[package]
name = "figma-mcp-export"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "figma-mcp-export"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
eframe = "0.33"
open = "5"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
url = "2"

[profile.dev]
split-debuginfo = "unpacked"